--- a/about-us.html
+++ b/about-us.html
@@ -110,7 +110,7 @@
     </section>
     <!-- About Us area end -->
     <!-- Our Feature area start -->
-    <section class="our-featured position-relative pt-130 pb-130">
+    <!-- <section class="our-featured position-relative pt-130 pb-130">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12  text-center mb-60">
@@ -190,7 +190,7 @@
 
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Our Feature area end -->
 
     <!-- Testimonial area start -->
@@ -230,7 +230,8 @@
             </div>
         </div>
     </section>
-    <!-- Testimonial area End -->
+    <!-- Testimonial area End -->\
+
     <!-- Team Expert area start -->
     <section class="team-expert position-relative about-us-team-area pt-130">
         <div class="container">
@@ -238,12 +239,12 @@
                 <div class="col-lg-7 col-md-6 col-sm-6 mb-60">
                     <div class="section-title">
                         <h4 class="text-uppercase mb-40">- Team mates -</h4>
-                        <h1 class="text-uppercase">Our Expert trainer</h1>
+                        <h1 class="text-uppercase">Our Expert Coaches</h1>
                     </div>
                 </div>
                 <div class="col-lg-5 col-md-6 col-sm-6 text-right">
                     <div class="site-btn about-btn team-btn">
-                        <a href="#" class="primary-btn btn filled-btn text-uppercase">join as as trainer</a>
+                        <!-- <a href="#" class="primary-btn btn filled-btn text-uppercase">join as as trainer</a> -->
                     </div>
                 </div>
             </div>
@@ -323,7 +324,7 @@
 
 
     <!-- banenr area start -->
-    <section class="banner-area position-relative pt-130 pb-130">
+    <!-- <section class="banner-area position-relative pt-130 pb-130">
         <div class="container">
             <div class="banner-outer-row position-relative pt-60 pb-60 pl-100 pr-100" data-background="assets/img/banner/banenr-bg.jpg">
                 <div class="banner-outer-row-overlay"></div>
@@ -344,11 +345,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- banenr area end -->
 
     <!-- footer area start -->
-    <footer class="footer-area position-relative pt-130" data-background="assets/img/footer/footer-bg.png">
+    <footer class="footer-area position-relative pt-130" data-background="https://images.unsplash.com/photo-1534258936925-c58bed479fcb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1331&q=80">
         <div class="footer-top-area pb-80">
             <div class="container">
                 <div class="row d-flex justify-content-between">
@@ -358,19 +359,20 @@
                                 <a href="index.html"><img src="assets/img/footer-logo.png" alt=""></a>
                             </div>
                             <div class="footer-description">
-                                <p>Mohammad Ali Fitness Center is a professional fitness training center. Commercial publishing platforms and content management systems ensure that you can show different text, different data using.</p>
+                                <p>Smallville Athletics is a professional fitness training center. Commercial publishing platforms and content management systems ensure that you can show different text, different data using.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="widget footer-widget">
-                            <h3 class="text-uppercase mb-40">Contact Info</h3>
+                            <h3 class="text-uppercase mb-20">Contact Info</h3>
                             <div class="contact-info">
                                 <ul>
-                                    <li><i class="fa fa-map"></i>2750 Quadra Street Victoria, USA</li>
-                                    <li><i class="fa fa-envelope"></i><a href="mailto:info@example.com">info@example.com</a></li>
-                                    <li><i class="fa fa-phone"></i><a href="tel:+324-9442-515">+324-9442-515</a></li>
+                                    <li><i class="fa fa-map"></i>1905 S. Judson, Fort Scott, KS, United States, Kansas</li>
+                                    <li><i class="fa fa-envelope"></i><a href="mailto:admin@smallville-athletics.com">admin@smallviille-athleticscom</a></li>
+                                    <li><i class="fa fa-phone"></i><a href="tel:+16207199602">(620) 719-9602</a></li>
                                 </ul>
+                                
                             </div>
                             <div class="social-list footer-social-list">
                                 <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
@@ -381,21 +383,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6  col-sm-6">
-                        <div class="widget footer-widget">
-                            <h3 class="text-uppercase mb-40">Subscribe now</h3>
-                            <div class="subscribe-form">
-                                <form action="#">
-                                    <div class="form-group">
-                                        <input type="email" placeholder="Enter Email" required>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="site-btn about-btn why-btn banner-btn">
-                                            <button class="primary-btn btn filled-btn text-uppercase" type="submit">become a member</button>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
+                        <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=1905%20S.%20Judson,%20Fort%20Scott,%20KS,%20United%20States,%20Kansas&t=k&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com/divi-discount/">divi discount</a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net">google map for websites</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
                     </div>
                 </div>
             </div>
@@ -406,7 +394,7 @@
                 <div class="row d-flex align-items-center">
                     <div class="col-lg-10  col-md-6  col-sm-6">
                         <div class="copyright-content">
-                            <p>© Copyright M.ALi 2019. All Right Reserved. Designed by UI Park Team</p>
+                            <p>© Copyright Smallville Athletics 2022. All Right Reserved. Designed by Tyler Wallace</p>
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-6 col-sm-6 text-right">
