--- a/class.html
+++ b/class.html
@@ -178,7 +178,7 @@
     </section>
     <!-- Our cource area end -->
     <!-- Why Join us area start -->
-    <section class="why-join-us-area position-relative pt-130 pb-130" data-background="assets/img/join/join-us.jpg">
+    <!-- <section class="why-join-us-area position-relative pt-130 pb-130" data-background="assets/img/join/join-us.jpg">
         <div class="why-join-us-overlay"></div>
         <div class="container">
             <div class="row">
@@ -200,7 +200,7 @@
         <div class="why-join-us-thumb">
             <img src="assets/img/join/join-us-thumb.png" alt="">
         </div>
-    </section>
+    </section> -->
     <!-- Why Join us area End -->
     <section class="our-class-schedule gray-bg pt-130 pb-130 gray-bg">
         <div class="container">
@@ -1365,7 +1365,7 @@
     <!-- Class schedule area end -->
 
     <!-- banenr area start -->
-    <section class="banner-area position-relative pt-130 pb-130">
+    <!-- <section class="banner-area position-relative pt-130 pb-130">
         <div class="container">
             <div class="banner-outer-row position-relative pt-60 pb-60 pl-100 pr-100" data-background="assets/img/banner/banenr-bg.jpg">
                 <div class="banner-outer-row-overlay"></div>
@@ -1386,11 +1386,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- banenr area end -->
 
     <!-- footer area start -->
-    <footer class="footer-area position-relative pt-130" data-background="assets/img/footer/footer-bg.png">
+    <footer class="footer-area position-relative pt-130" data-background="https://images.unsplash.com/photo-1534258936925-c58bed479fcb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1331&q=80">
         <div class="footer-top-area pb-80">
             <div class="container">
                 <div class="row d-flex justify-content-between">
@@ -1400,7 +1400,7 @@
                                 <a href="index.html"><img src="assets/img/footer-logo.png" alt=""></a>
                             </div>
                             <div class="footer-description">
-                                <p>Mohammad Ali Fitness Center is a professional fitness training center. Commercial publishing platforms and content management systems ensure that you can show different text, different data using.</p>
+                                <p>Smallville Athletics is a professional fitness training center. Commercial publishing platforms and content management systems ensure that you can show different text, different data using.</p>
                             </div>
                         </div>
                     </div>
@@ -1409,10 +1409,11 @@
                             <h3 class="text-uppercase mb-20">Contact Info</h3>
                             <div class="contact-info">
                                 <ul>
-                                    <li><i class="fa fa-map"></i>2750 Quadra Street Victoria, USA</li>
-                                    <li><i class="fa fa-envelope"></i><a href="mailto:info@example.com">info@example.com</a></li>
-                                    <li><i class="fa fa-phone"></i><a href="tel:+324-9442-515">+324-9442-515</a></li>
+                                    <li><i class="fa fa-map"></i>1905 S. Judson, Fort Scott, KS, United States, Kansas</li>
+                                    <li><i class="fa fa-envelope"></i><a href="mailto:admin@smallville-athletics.com">admin@smallviille-athleticscom</a></li>
+                                    <li><i class="fa fa-phone"></i><a href="tel:+16207199602">(620) 719-9602</a></li>
                                 </ul>
+                                
                             </div>
                             <div class="social-list footer-social-list">
                                 <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
@@ -1423,21 +1424,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6  col-sm-6">
-                        <div class="widget footer-widget">
-                            <h3 class="text-uppercase mb-20">Subscribe now</h3>
-                            <div class="subscribe-form">
-                                <form action="#">
-                                    <div class="form-group">
-                                        <input type="email" placeholder="Enter Email" required>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="site-btn about-btn why-btn banner-btn">
-                                            <button class="primary-btn btn filled-btn text-uppercase" type="submit">become a member</button>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
+                        <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=1905%20S.%20Judson,%20Fort%20Scott,%20KS,%20United%20States,%20Kansas&t=k&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com/divi-discount/">divi discount</a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net">google map for websites</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
                     </div>
                 </div>
             </div>
@@ -1448,7 +1435,7 @@
                 <div class="row d-flex align-items-center">
                     <div class="col-lg-10  col-md-6  col-sm-6">
                         <div class="copyright-content">
-                            <p>© Copyright M.ALi 2019. All Right Reserved. Designed by UI Park Team</p>
+                            <p>© Copyright Smallville Athletics 2022. All Right Reserved. Designed by Tyler Wallace</p>
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-6 col-sm-6 text-right">
