--- a/index.html
+++ b/index.html
@@ -22,19 +22,25 @@
 <body>
 
 
+
+
     <!-- navigation area start -->
     <header class="header_area" id="header_area">
         <div class="main_menu">
             <nav class="navbar navbar-expand-xl navbar-light">
                 <div class="container position-relative">
-                    <a class="navbar-brand logo_h" href="index.html"><img src="assets/img/Logo.png" alt=""></a>
+                    <div class="left">
+                        <a class="navbar-brand logo_h" href="index.html" >
+                            <img src="assets/img/Logo.png" alt="" >
+                        </a>
+                    </div>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
                     <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
-                        <ul class="nav navbar-nav menu_nav ml-auto" id="mainnavbar">
+                        <ul class="nav navbar-nav menu_nav ml-auto" id="mainnavbar" style="float:right;">
                             <li ><a href="index.html">Home</a></li>
                             <li><a href="about-us.html">About</a></li>
 
@@ -42,12 +48,18 @@
                             <li class="nav-item "><a href="trainers.html">Coaches</a></li>
                             
                            
-
+                            </ul>
+                      </div>  
                 </div>
             </nav>
         </div>
     </header>
     <!-- navigation area end -->
+
+
+
+
+
     <!-- Hero area start -->
     <section class="hero-area position-relative h-10 d-flex align-items-center" data-background="assets/img/hero-bg.jpg">
         <div id="home" class="container">
