--- a/about-us.html
+++ b/about-us.html
@@ -262,7 +262,12 @@
                         </div>
                         <div class="team-expert-meta text-center mt-30">
                             <h4 class="text-uppercase mb-15">DAVID PK. WILLIAM</h4>
-                            <p class="text-uppercase">Yoga Trainer</p>
+                            
+                            <p class="text-uppercase" style="text-decoration: underline;"><strong>Yoga Trainer</strong></p>
+                            <ul>
+                                <li> <span class="text-uppercase"><strong>Classes: </strong></span> Strength Training</li>
+                                <li><strong>About: </strong> I've been training with lorem ipsum since the gladiators began</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -279,7 +284,11 @@
                         </div>
                         <div class="team-expert-meta text-center mt-30">
                             <h4 class="text-uppercase mb-15">Mark pk Parker</h4>
-                            <p class="text-uppercase">Yoga Trainer</p>
+                            <p class="text-uppercase" style="text-decoration: underline;"><strong>Yoga Trainer</strong></p>
+                            <ul>
+                                <li> <span class="text-uppercase"><strong>Classes: </strong></span> Strength Training</li>
+                                <li><strong>About: </strong> I've been training with lorem ipsum since the gladiators began</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -296,7 +305,11 @@
                         </div>
                         <div class="team-expert-meta text-center mt-30">
                             <h4 class="text-uppercase mb-15">steve m. jobs</h4>
-                            <p class="text-uppercase">Yoga Trainer</p>
+                            <p class="text-uppercase" style="text-decoration: underline;"><strong>Yoga Trainer</strong></p>
+                            <ul>
+                                <li> <span class="text-uppercase"><strong>Classes: </strong></span> Strength Training</li>
+                                <li><strong>About: </strong> I've been training with lorem ipsum since the gladiators began</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -313,7 +326,11 @@
                         </div>
                         <div class="team-expert-meta text-center mt-30">
                             <h4 class="text-uppercase mb-15">jonathan deo</h4>
-                            <p class="text-uppercase">Yoga Trainer</p>
+                            <p class="text-uppercase" style="text-decoration: underline;"><strong>Yoga Trainer</strong></p>
+                            <ul>
+                                <li> <span class="text-uppercase"><strong>Classes: </strong></span> Strength Training</li>
+                                <li><strong>About: </strong> I've been training with lorem ipsum since the gladiators began</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -376,9 +393,9 @@
                             </div>
                             <div class="social-list footer-social-list">
                                 <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
-                                <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
+                                <!-- <a href="#" target="_blank"><i class="fa fa-twitter"></i></a> -->
                                 <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>
-                                <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+                                <!-- <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a> -->
                             </div>
                         </div>
                     </div>
