--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </section>
     <!-- Hero area end -->
     <!-- Featured services area start -->
-    <section class="feature-service position-relative pt-130 pb-130">
+    <!-- <section class="feature-service position-relative pt-130 pb-130">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12  text-center mb-60">
@@ -190,7 +190,7 @@
 
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Featured services area end -->
     <!-- About Us area Start -->
     <section class="about-us-area position-relative pt-130 pb-130 gray-bg">
@@ -1963,7 +1963,7 @@
 
     <!-- banenr area start -->
 
-    <!-- <section class="banner-area position-relative pt-130 pb-130">
+    <section class="banner-area position-relative pt-130 pb-130">
         <div class="container">
             <div class="banner-outer-row position-relative pt-60 pb-60 pl-100 pr-100" data-background="https://images.unsplash.com/photo-1534258936925-c58bed479fcb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1331&q=80">
                 <div class="banner-outer-row-overlay"></div>
@@ -1984,7 +1984,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- banenr area end -->
 
     <!-- footer area start -->
