fixed bug with navbar logo

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="container position-relative">
                     <div class="left">
                         <a class="navbar-brand logo_h" href="index.html" >
-                            <img src="assets/img/Logo.png" alt="" >
+                            <img src="assets/img/Logo.png" alt="smallville-athletics" style="position: relative; left: -8.2em; overflow: hidden;" >
                         </a>
                     </div>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -2015,14 +2015,32 @@
                             </div>
                             <div class="social-list footer-social-list">
                                 <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
-                                <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
+                                
                                 <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>
-                                <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+                                
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6  col-sm-6">
-                        <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=1905%20S.%20Judson,%20Fort%20Scott,%20KS,%20United%20States,%20Kansas&t=k&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com/divi-discount/">divi discount</a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net">google map for websites</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
+                        <div class="mapouter">
+                            <div class="gmap_canvas">
+                                <iframe class="gmap" width="400px" height="400px" id="gmap_canvas" src="https://maps.google.com/maps?q=1905%20S.%20Judson,%20Fort%20Scott,%20KS,%20United%20States,%20Kansas&t=k&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
+
+                                </iframe>
+                                <a href="https://www.whatismyip-address.com/divi-discount/">divi discount</a>
+                                <br>
+                                <style>.mapouter
+                                {position:relative;
+                                text-align:right;height:400px;width:600px;}</style>
+                                <a href="https://www.embedgooglemap.net">google map for websites</a>
+                                <style>.gmap_canvas {
+                                    overflow:hidden;
+                                    background:none!important;
+                                    height:500px;
+                                    width:600px;}
+                                </style>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
