--- a/index.html
+++ b/index.html
@@ -2062,25 +2062,24 @@
 
     <section class="banner-area position-relative pt-130 pb-130">
       <div class="container">
-        <div
+        <!-- <div
           class="banner-outer-row position-relative pt-60 pb-60 pl-100 pr-100"
-          data-background="https://images.unsplash.com/photo-1534258936925-c58bed479fcb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1331&q=80"
-        >
-          <div class="banner-outer-row-overlay"></div>
+        > -->
+          <!-- <div class="banner-outer-row-overlay"></div> -->
           <div class="row d-flex align-items-center">
             <div class="col-lg-8">
-              <div class="banner-left-side">
+              <!-- <div class="banner-left-side">
                 <h1 class="text-uppercase mb-30">Summer Offer</h1>
                 <h4 class="text-uppercase">PAY NOW AND GET 35% DISCOUNT</h4>
-              </div>
+              </div> -->
             </div>
             <div class="col-lg-4">
-              <div class="banner-right-side">
-                <div class="site-btn about-btn why-btn banner-btn">
-                  <a href="#" class="primary-btn btn filled-btn text-uppercase"
+              <!-- <div class="banner-right-side">
+                <!-- <div class="site-btn about-btn why-btn banner-btn"> -->
+                  <!-- <a href="#" class="primary-btn btn filled-btn text-uppercase"
                     >become a member</a
-                  >
-                </div>
+                  > -->
+                </div> -->
               </div>
             </div>
           </div>
@@ -2136,7 +2135,11 @@
                   </ul>
                 </div>
                 <div class="social-list footer-social-list">
-                  <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
+                  <a
+                    href="https://www.facebook.com/smallvilleathletics/"
+                    target="_blank"
+                    ><i class="fa fa-facebook"></i
+                  ></a>
 
                   <a href="#" target="_blank"
                     ><i class="fa fa-instagram"></i
@@ -2159,9 +2162,7 @@
                     marginwidth="0"
                   >
                   </iframe>
-                  <a href="https://www.whatismyip-address.com/divi-discount/"
-                    >divi discount</a
-                  >
+
                   <br />
                   <style>
                     .mapouter {
@@ -2171,9 +2172,7 @@
                       width: 600px;
                     }
                   </style>
-                  <a href="https://www.embedgooglemap.net"
-                    >google map for websites</a
-                  >
+
                   <style>
                     .gmap_canvas {
                       overflow: hidden;
