--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       <div class="main_menu">
         <nav class="navbar navbar-expand-xl navbar-light">
           <div class="container position-relative">
-            <div class="left">
+            <div class="">
               <a class="navbar-brand logo_h" href="index.html">
                 <img
                   src="assets/img/Logo.png"
                   alt="smallville-athletics"
-                  style="position: relative; left: -8.2em; overflow: hidden"
+                  style="position: relative; ; overflow: hidden"
                 />
               </a>
             </div>
