--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
               <div class="single-classes-inner-content">
                 <h3 class="text-uppercase mb-30">Strength Class</h3>
                 <p>
-                  A 5 day a week, 60 minute class, focused on finding a balance
+                  60 minute class focused on finding a balance
                   between Strength & Conditioning for general overall fitness.
                 </p>
               </div>
@@ -385,7 +385,7 @@
                   Smallville J.V <br />(Teens & Preteens)
                 </h3>
                 <p>
-                  Hour long class broken down by age groups and fitness level -
+                  60 Minute class broken down by age groups and fitness level -
                   designed to provide balance, core, functional training, speed,
                   agility, and so much more in a fun atmosphere.
                 </p>
@@ -448,7 +448,7 @@
                     role="tab"
                     aria-controls="strength"
                     aria-selected="true"
-                    >Strength Class<br />1 Hour</a
+                    >Strength Class<br />60 Min</a
                   >
                 </li>
                 <!-- <li class="nav-item">
@@ -499,7 +499,7 @@
                     role="tab"
                     aria-controls="meditation"
                     aria-selected="false"
-                    >Kids<br />1 Hour</a
+                    >Kids<br />60 min</a
                   >
                 </li>
                 <!-- <li class="nav-item">
