--- a/index.html
+++ b/index.html
@@ -219,16 +219,15 @@
           <div class="col-lg-7 col-md-6">
             <div class="about-us-area-left">
               <div class="section-title mb-40">
-                <h4 class="text-uppercase mb-20">read about us</h4>
+                <h4 class="text-uppercase mb-20">more about smallville</h4>
                 <h1 class="text-uppercase">
-                  Our Personalized Apporach Makes a Difference
+                  Our Personalized Approach Makes The Difference
                 </h1>
               </div>
 
               <div class="about-inner-content">
                 <p class="mb-30">
-                  At Smallville Athletics, located in Fort Scott Kansas for over
-                  7 years, we are dedicated towards our mission of building a
+                  Although Smallville has had a few different owners over the past 8+ years, we have always been dedicated towards our mission of building a
                   well balanced, healthy and fully capable community!
                 </p>
                 <p class="mb-40"><strong>Move Well. Build Strength.</strong></p>
@@ -262,8 +261,8 @@
         <div class="row">
           <div class="col-lg-12 text-center mb-60">
             <div class="section-title">
-              <h4 class="text-uppercase mb-20">our classes</h4>
-              <h1 class="text-uppercase">our popular courses</h1>
+              <h4 class="text-uppercase mb-20">our Classes</h4>
+              <h1 class="text-uppercase">For anyone and everyone</h1>
             </div>
           </div>
         </div>
@@ -359,8 +358,8 @@
                 </h3>
                 <p>
                   40 minute high energy cardio circuit with emphasis on Core
-                  Stablility & Lean Muscle Development. HITT type workout with
-                  dumbbells and kettle bells. Come sweat with the girls and have
+                  Stablility & Lean Muscle Development. HITT style workout with
+                  dumbbells, kettle bells, cardio equipment & more! Come sweat with the girls and have
                   fun!
                 </p>
               </div>
