--- a/index.html
+++ b/index.html
@@ -263,8 +263,9 @@
         <div class="row">
           <div class="col-lg-12 text-center mb-60">
             <div class="section-title">
-              <h4 class="text-uppercase mb-20">our Classes</h4>
-              <h1 class="text-uppercase">For anyone and everyone</h1>
+              <h1 class="text-uppercase">Our Classes</h1>
+              <h4 class="text-uppercase mb-20">For Anyone & Everyone</h4>
+              
             </div>
           </div>
         </div>
